# embedded_labs

./: README.md  pyproject.toml
embedded_labs/: main.py
tests/: test_embedded_labs.py
