[tool.poetry]
name = "embedded-labs"
version = "0.1.0"
description = ""
authors = ["Oja Bajracharya <oja.bajracharya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gpiozero = "^1.5.1"

[tool.poetry.scripts]
embedded-labs="embedded_labs.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
